# wgus

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts/: lint.sh  test.sh
tests/: test_metadata.py  test_patches_chain.py  test_patches_chains.py
wgus/: __init__.py  constants.py  metadata.py  patches_chain.py  patches_chains.py  requests.py
